--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Arial";
+  box-sizing: border-box;
+  background-image: linear-gradient(to right,#61dafb,#282c34);
+}
+.tab{
+  background-color:#fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.tab:focus{
+  outline: none;
+}
+.tab:hover{
+  background-color: #61dafb;
+  cursor: pointer;
+
+}
+.hero{
+  background-image: linear-gradient(to right bottom,rgba(111, 210, 213, 0.8),rgba(91, 238, 186, 0.8)), url(static/photos/prva.png);
+}
+.title{
+  color: #282c34;
 }
